export to pdf iteration
